fixed button alignment changed to light background theme

--- a/css/kcdstyle.css
+++ b/css/kcdstyle.css
@@ -47,7 +47,7 @@ html {
     height: 100%;
 }
 body {
-    background-image: linear-gradient(to bottom right,#74396a,#5ca0c3);
+    background-image: linear-gradient(to bottom right,rgba(116,57,106,0.2),rgba(92,160,195,.2));
     background-size: cover;
     color:#1a1a1a;
 }
@@ -78,10 +78,25 @@ body {
     margin-bottom: 30px
 }
 .aos{
+    padding-top: 20px;
     padding-bottom: 50px;
 }
-.btn-wrapper {
+
+
+.btn-wrapper-align {
+    position: absolute;
+    bottom: 35px;
+    left: 50%;
+    transform: translate(-50%,50%);
+}
+.btn-wrapper-fake
+{
+    visibility:hidden;
     padding:20px;
+}
+
+.btn-wrapper{
+    padding: 20px;
 }
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img{
@@ -133,6 +148,6 @@ body {
 }
 .foot {
     text-align: center;
-    color: #9d9d9d;
+    color: #222;
     padding-bottom: 50px;
 }
